Reformatting - use CalendarHistoryServer in Service